tests/ui/rfcs/rfc-2457-non-ascii-idents/crate_name_nonascii_forbidden-2.stderr
error: cannot load a crate with a non-ascii name `му_сгате`
  --> $DIR/crate_name_nonascii_forbidden-2.rs:4:5
   |
LL | use му_сгате::baz;
   |     ^^^^^^^^

error: aborting due to previous error

