tests/ui/rfcs/rfc-2457-non-ascii-idents/crate_name_nonascii_forbidden-2.rs
// compile-flags:--extern му_сгате
// edition:2018

use му_сгате::baz; //~  ERROR cannot load a crate with a non-ascii name `му_сгате`

fn main() {}
